ecmascript/parser/tests/test262-error-references/fail/2cbdd5fad4e5332d.js.stderr
error: Unexpected token Some(Semi)
 --> $DIR/tests/test262-parser/fail/2cbdd5fad4e5332d.js:2:5
  |
2 |   y,;
  |     ^

